--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,9 @@
 
     <string name="location_updated">Location Updated: %1$s</string>
 
+    <!-- Geofencing -->
+    <string name="geofence_transition_invalid_type">
+        Geofence transition error: invalid transition type %1$d
+    </string>
+    <string name="home_address_added">Home address added</string>
 </resources>
