--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_setting_fragment">Some setting</string>
 
-
+    <string name="input_tag">Input Tag for this session: </string>
 </resources>
