--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="hello_setting_fragment">Some setting</string>
 
     <string name="input_tag">Input Tag for this session: </string>
+
+    <string name="input_hint">Input coordinate for Home: </string>
+    <string name="input_lat">Latitude: </string>
+    <string name="input_lon">Longitude: </string>
 </resources>
